--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="about front end developer Sophia Bernitz" />
     <title>Sophia Bernitz, front end developer</title>
     <link rel="stylesheet" href="style.css" />
     <link
