--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <a href="index.html" class="homepage-link">Back to homepage</a>
-    <h1>About me</h1>
-    <h3>Front-end developer from Boston, USA</h3>
+    <h1 class="text-center">About me</h1>
+    <h3 class="text-center">Front-end developer from Boston, USA</h3>
     <div class="about-paragraphs">
       <p class="about-me-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
