--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         </div>
       </div>
     </nav>
-    <h2>👋 Hi I am</h2>
-    <h1>Sophia Bernitz</h1>
-    <h3>🇱🇷 Front-end developer, based in Boston, MA, USA</h3>
+    <h2 class="text-center">👋 Hi I am</h2>
+    <h1 class="text-center">Sophia Bernitz</h1>
+    <h3 class="text-center">🇱🇷 Front-end developer, based in Boston, MA, USA</h3>
     <div class="navigation-links">
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
