last changes for first draft

--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"
   ></script>
-
-    <title>About [Your name]</title>
+    <title>About Sophia Bernitz, front end Developer</title>
   </head>
   <body>
     <a href="index.html" class="homepage-link">Back to homepage</a>
