update links with /

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -56,14 +56,14 @@
     <h1 class="text-center">Sophia Bernitz</h1>
     <h3 class="text-center">🇱🇷 Front-end developer, based in Boston, MA, USA</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="/about.html#contact" class="contact-link">Contact me</a>
+      <a href="/about.html" class="about-link">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             alt="Yoga"
             class="img-fluid mt-4 rounded"
           />
@@ -98,7 +98,7 @@
       </div>
       <div class="col-md-6">
         <img
-          src="images/weather.png"
+          src="/images/weather.png"
           alt="Weather"
           class="img-fluid mt-4 rounded"
         />
@@ -107,7 +107,7 @@
     <div class="row">
       <div class="col-md-6">
         <img
-          src="images/yogurt.png"
+          src="/images/yogurt.png"
           alt="Yoga"
           class="img-fluid mt-4 rounded"
         />
